[gd_scene load_steps=7 format=3 uid="uid://du6scg0nqprkx"]

[ext_resource type="Script" uid="uid://mqufxor6c8py" path="res://scripts/echoDeck.gd" id="1_5yc16"]
[ext_resource type="Texture2D" uid="uid://b8dn656u8yhdw" path="res://assets/echoDeck/warrior.png" id="2_2p0xq"]
[ext_resource type="Texture2D" uid="uid://cjtf2gris2mvp" path="res://assets/echoDeck/monk.png" id="3_ptqov"]
[ext_resource type="Texture2D" uid="uid://ctqnouc2r5at3" path="res://assets/echoDeck/lancer.png" id="4_bonu2"]
[ext_resource type="Texture2D" uid="uid://bpvcn8trj7hi7" path="res://assets/echoDeck/goblin.png" id="5_hxxh5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cq1sx"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.5019608)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="echoDeck" type="CanvasLayer"]
script = ExtResource("1_5yc16")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="PanelContainer1" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_cq1sx")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer1"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer1/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_2p0xq")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer1/HBoxContainer"]
layout_mode = 2
text = "[1] Warrior"
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_cq1sx")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_ptqov")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "[2] Monk"
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_cq1sx")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("4_bonu2")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
text = "[3] Lancer"
vertical_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_cq1sx")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer4/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("5_hxxh5")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer4/HBoxContainer"]
layout_mode = 2
text = "[4] Goblin"
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
